--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,8 @@ input[type="radio"].visually-hidden {
   background-color: rgb(240, 197, 46);
 }
 
-.button:active span {
-  opacity: 0.3;
+.button:active {
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .main-header-logo {
@@ -497,8 +497,8 @@ input[type="radio"].visually-hidden {
   background-color: rgb(0, 0, 0);
 }
 
-.search-button:active span {
-  opacity: 0.3;
+.search .search-button:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .main-navigation a:hover,
