--- a/css/style.css
+++ b/css/style.css
@@ -1294,9 +1294,11 @@ label[for="services-2"] {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  width: 140px;
+  width: 141px;
   margin: 0;
   padding: 0;
+  padding-top: 20px;
+  padding-right: 54px;
 }
 
 .footer-social a {
@@ -1321,17 +1323,10 @@ label[for="services-2"] {
   background-image: url(../img/twitter.svg);
 }
 
-.footer-copyright a {
-  display: inline-block;
+.footer-copyright {
   width: 27px;
   height: 35px;
-}
-
-.footer-copyright {
-  width: 80px;
   margin-top: 21px;
-
-  text-align: right;
 }
 
 .footer-bottom {
@@ -1346,7 +1341,7 @@ label[for="services-2"] {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 43px;
+  margin-bottom: 63px;
 }
 
 .footer-bottom::before {
@@ -1354,6 +1349,7 @@ label[for="services-2"] {
 
   width: 80px;
   height: 7px;
+  margin-top: 21px;
 
   background-color: rgb(255, 198, 0);
 }
