--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ input[type="radio"].visually-hidden {
   font-size: 18px;
   line-height: 24px;
   font-family: "Gilroy", "Arial", sans-serif;
+  vertical-align: middle;
   color: rgb(0, 0, 0);
   text-transform: uppercase;
   letter-spacing: 3.66px;
@@ -713,7 +714,7 @@ input[type="radio"].visually-hidden {
 
 .slider-content {
   margin-top: 18px;
-  margin-bottom: 49px;
+  margin-bottom: 52px;
 
   font-weight: 300;
   font-size: 15px;
@@ -1085,7 +1086,7 @@ label[for="services-2"] {
 .deliveries {
   margin: 0;
   margin-top: 66px;
-  margin-bottom: 59px;
+  margin-bottom: 57px;
   padding-left: 35px;
 
   list-style: none;
@@ -1120,7 +1121,7 @@ label[for="services-2"] {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-bottom: 87px;
+  margin-bottom: 89px;
 }
 
 .info-columns p {
@@ -1214,7 +1215,7 @@ label[for="services-2"] {
 
 .contacts-map {
   display: block;
-  margin-bottom: 65px;
+  margin-bottom: 63px;
   margin-left: 3px;
 }
 
@@ -1828,7 +1829,7 @@ input[type="radio"]:disabled {
 }
 
 .bluetooth {
-  margin-bottom: 28px;
+  margin-bottom: 26px;
 }
 
 .filters .button {
